2週目システムサービス途中まで

--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -1,13 +1,13 @@
 # 10.必須システムサービス
 
-``` txt
-## システムクロックの設定
+``` txt : システムクロックの設定
 ・date             :: システムクロックの参照や設定を行うコマンド。
                       date [MMDDhhmm[CC[YY]][.ss]](MMは月、DDは日、hhは時、mmは分、CCは西暦の上2桁、YYは西暦の下2桁、ssは秒)
 ・hwclock          :: ハードウェアクロックの参照や設定を行うコマンド。
 ・timedatectl      :: systemdの動作するシステムにおいてシステム時刻の表示や設定を行うコマンド。
                       list-timzones :: タイムゾーンを一覧表示するサブコマンド。sが付く。
 ・ntpd             :: NTPデーモン。NTPサーバー機能を提供する。
+                      自身をNTPサーバとすることで、指定したNTPサーバに定期的に時刻情報を問い合わせて自身の時刻を修正し、正確なシステムクロックを維持できます。
 ・/etc/ntp.conf    :: ntpd（NTPサーバのデーモン）の設定ファイル。
                       restrict  :: ntpdへのアクセス制限を行う。
                       server    :: 時刻を取得するサーバを指定。
@@ -17,29 +17,38 @@
 ・Chrony(ｸﾛｰﾆｰ)    :: ntpdに代わるNTPサーバ/クライアント。
 ・chronyd          :: ntpdに代わるNTPサーバ/クライアントであるChronyのデーモン。
 ・/etc/chrony.conf :: Chronyの設定ファイル。
+```
 
-## システムログの設定
+``` txt : システムログの設定
+・syslog
+・rsyslog
+・syslog-ng
+※次世代のsyslog :: rsyslog,syslog-ng
 ・/etc/syslog.conf  :: syslogに関する設定ファイル。
 ・/etc/rsyslog.conf :: rsyslogの設定ファイル。
-・/etc/systemd/journald.conf :: sytemd-journaldの設定ファイル。
-                               「/run/log/journal」配下にシステム固有のディレクトリを作成し、その中の「system.journal」ジャーナルファイルに記録する。
-                                ※「/run」ディレクトリはメモリ上に作成されたファイルシステム上のディレクトリのため、再起動するとデータが消えてしまいます。
-・journalctl        :: systemdの動作するシステムでsystemd-journaldのログを表示するコマンド。ログはバイナリ形式。
+・/etc/systemd/journald.conf
+sytemd-journaldの設定ファイル。
+「/run/log/journal」配下にシステム固有のディレクトリを作成し、その中の「system.journal」ジャーナルファイルに記録する。
+※「/run」ディレクトリはメモリ上に作成されたファイルシステム上のディレクトリのため、再起動するとデータが消えてしまいます。
+・/run/log/journal/system.journal :: バイナリ形式のログが保存されるジャーナルファイル。
+
+・journalctl
+systemdの動作するシステムでsystemd-journaldのログを表示するコマンド。ログはバイナリ形式。
 syslogdがsystemd-journaldからsyslogを読み出すように設定する必要がある。
 rsyslogやsyslog-ngは、設定せずにsystemd-journaldから読み出せます。
-                       [-xd :: エマージェンシー]
-                       [-k  :: dmesgと同じ情報を得られるオプション]
-                       ※前回の起動からシャットダウンまでのログを出力
-                       /var/log/journal ディレクトリが存在する
-                       journalctl -b -1
-各Unitが出力する表示可能なログをすべて表示させたい。
+[-xd :: エマージェンシー]
+[-k  :: dmesgと同じ情報を得られるオプション]
+※前回の起動からシャットダウンまでのログを出力
+/var/log/journal ディレクトリが存在する
+journalctl -b -1
+※各Unitが出力する表示可能なログをすべて表示させたい。
 -l, --full
-sshd.service ユニットからのログのみを出力させたい
+※sshd.service ユニットからのログのみを出力させたい
 journalctl -u sshd.service
 journalctl _SYSTEMD_UNIT=sshd.service
 
-・systemd-cat       :: 指定したコマンドの実行結果をジャーナルファイルに書き込むコマンド。ログメッセージを生成できるloggerコマンドと同様です。
-・logger            :: システムログに記録を追加するコマンド。  
+・systemd-cat :: 指定したコマンドの実行結果をジャーナルファイルに書き込むコマンド。ログメッセージを生成できるloggerコマンドと同様です。
+・logger      :: システムログに記録を追加するコマンド。  
 
 ・ファシリティ
 auth,authpriv :: 認証システム(loginなど)による出力
@@ -63,7 +72,7 @@ info    :: 一般的な情報
 debug   :: デバッグ情報
 none    :: ログを記録しない
 
-出力先
+・出力先
 ファイル名        :: ファイルへの出力
 ユーザー名        :: ユーザーの端末への出力
 @ホスト名         :: リモートホストのsyslogへUDPで出力
@@ -72,21 +81,68 @@ none    :: ログを記録しない
 /dev/console      :: コンソールへの出力
 /var/log/messages :: ログファイルに出力
 *                 :: ログイン中のすべてのユーザーの端末に出力
+```
 
-## メール管理(メールシステム)
+``` txt : メール管理(メールシステム)
+・MTA(Message Transfer Agent)
+メールの転送を行うプログラム。ネットワーク経由、またはサーバ内部（ローカル）のメール転送依頼に基づき、指定された宛先へメールを転送する。
+メールサーバとして使用される。
+・MDA(Mail Delivery Agent)
+ローカルのメールスプールへ配送するプログラム。
+MTAによってローカルの宛先へのメールであると判断されたメールを受け取り、宛先ユーザのメールボックス（メールスプール）へメールを配送する。
+・MUA(Mail User Agent)
+ユーザーがメールを扱うプログラム。自身のメールボックスへアクセスして受信したメールを閲覧したり、メールを送信したりする。
+MUAの例としては、LinuxのmailコマンドやThunderbird、WindowsやMac OS X付属のメールソフトがある。
 
-## プリンタ管理
-CUPS(Common Unix Printing System) :: 
-cupsd :: UNIXの印刷サービスCUPSのデーモン。
-/etc/cups/cupsd.conf    :: cupsdの設定ファイル。接続要求を受けるポート番号(デフォルトは631)や、接続するクライアントのアクセス制御などの設定を行う。
-/etc/cups/printers.conf :: プリンタに関する設定ファイル。
-/etc/printcap           :: レガシー印刷システムとの互換性を確保するため自動的に作られる設定ファイル。
-/var/spool/cups/        :: プリントスプールの場所。
+・sendmail :: 古くから使われるMTAで、様々なメール転送方式に対応している。
+              1つのプログラムで全ての処理を実行できる反面、設定は難解で専用のツールを使う必要がある。  
+              セキュリティ面での問題がたびたび発生したり、処理速度が遅いなどの問題もある。
+・/var/spool/mail/   :: Sendmailのローカルユーザー宛のメールが格納されるディレクトリ
+・/var/spool/mqueue/ :: Sendmailの転送することが出来なかったメールを置くデフォルトのキューディレクトリ
 
-lp     :: CUPSの標準的な印刷コマンド。印刷ジョブを生成し、プリントキューに登録するコマンド。
-cancel :: CUPSの標準的な印刷コマンド。プリントキューにある印刷ジョブを削除するコマンド。
-lpstat :: CUPSの標準的な印刷コマンド。プリントキューにある印刷ジョブを表示するコマンド。
-lpr    :: レガシーな印刷システムであるLPDと互換性のある印刷コマンド。
+・Postfix :: sendmailとの高い互換性を保ちながら、処理速度を上げ、セキュリティも向上させている。
+             設定が平易。最近の一部のLinuxディストリビューションの標準MTAにもなっている。
+・/var/mail/                   :: Postfixのローカルユーザー宛のメールが格納されるディレクトリ
+・/var/spool/postfix/deferred/ :: Postfixの転送することが出来なかったメールを置くデフォルトのキューディレクトリ
+
+・exim :: Debian系の標準MTA。設定は平易だが、日本語の情報は比較的少ない。設定ファイルの内容はバージョンによって異なる。
+・/var/mail/                   :: Eximのローカルユーザー宛のメールが格納されるディレクトリ
+・/var/spool/exim/input/       :: Eximの転送することが出来なかったメールを置くデフォルトのキューディレクト
+
+・/etc/aliases :: sendmailでメールアドレスの別名を設定するファイル。
+・newaliases   ::「/etc/aliases」を編集後、設定を反映させるためのコマンド。
+・~/.forward   :: ユーザー個別でメールの転送先を記載するファイル。即時反映。
+・sendmail :: 古くからあるMTAのsendmailでは、メール送信やMTAの制御のためにsendmailコマンドが用意されていました。
+              引数無しで単独で実行すると、標準入力からメールのデータを受け取り、.(ピリオド)のみの行を受け取った時点でメールの送信を行います。
+・mail  :: メールの送信や受信メールの確認を行うコマンド。オプションを付けずにコマンドを実行すると、[/var/spool/mail/]に格納されている受信メールを表示する。
+・mailq :: 一般的なMTAにおいて、送信待ちのメールキューを一覧表示できるコマンド。
+・オープンリレー :: 
+```
+
+``` txt : プリンタ管理
+・CUPS(Common Unix Printing System)
+これまで使われてきた「lpd」に代わる新しいWebブラウザベースの印刷システム。
+・ネットワーク上のプリンタをサポートするプロトコル「IPP（Internet Printing Protocol)」を採用している。
+・プリンタの機種依存情報を記述する「PPD（PostScript Printer Description）」ファイルをサポートしている。
+・Webブラウザベースで設定できる。
+・従来の印刷システム「lpd」との互換性を持っている。
+
+・cupsd      :: UNIXの印刷サービスCUPSのデーモン。
+・lpd        :: Linuxでこれまで長年利用されてきた印刷用のデーモン。
+・/etc/cups/ :: UNIXの印刷サービスCUPSに関する設定ファイルが置かれるディレクトリ。
+・/etc/cups/cupsd.conf    :: cupsdの設定ファイル。接続要求を受けるポート番号(デフォルトは631)や、接続するクライアントのアクセス制御などの設定を行う。
+・/etc/cups/printers.conf :: プリンタに関する設定ファイル。
+・/etc/printcap           :: レガシー印刷システムとの互換性を確保するため自動的に作られる設定ファイル。
+・/var/spool/cups/        :: プリントスプールの場所。
+・IPP(Internet Printing Protocol) :: CUPSのネットワーク上のプリンタをサポートするプロトコル。
+・PPD(Postscript Printer Description) :: プリンタの機種依存情報を記述するファイル。
+
+・lp     :: CUPSの標準的な印刷コマンド。印刷ジョブを生成し、プリントキューに登録するコマンド。
+・cancel :: CUPSの標準的な印刷コマンド。プリントキューにある印刷ジョブを削除するコマンド。
+・lpstat :: CUPSの標準的な印刷コマンド。プリントキューにある印刷ジョブを表示するコマンド。
+・lpr    :: LPDと互換性のある印刷コマンド。レガシーな印刷システムであるLPDと互換性のある印刷コマンド。
+・lprm   :: LPDと互換性のある印刷コマンド。プリントキューにある印刷ジョブを削除するコマンド。
+・lpq    :: LPDと互換性のある印刷コマンド。プリントキューに登録されたジョブを一覧表示させるコマンド。
 ```
 
 ---
@@ -860,6 +916,15 @@ SMTPプロトコルでメッセージをやり取りするため、SMTPサーバ
 代表的なMTAプログラム  
 Exim,Postfix,Sendmailなど  
 
+Sendmailは標準的なMTAとして長く使われてきたが、最近は使われていない。(さすがに古いし、後継もある)  
+主流はEximとPostfix。  
+SMTPサーバーとして使われる。  
+EximとPostfixは以下のコマンドとファイルでの設定が有効であるためSendmailに互換性がある。  
+・sendmailコマンド  
+・newaliasesコマンド  
+・mailqコマンド  
+・~/.forwardファイル  
+
 ### MDA (Mail Delivery Agent)
 
 ローカルのメールスプールへ配送するプログラム。  
@@ -900,65 +965,39 @@ GUIベース : Thunderbird,Evolution
 ③MTA②がメールを受け取ると、ローカル配送プログラムであるMDAが、メールのさて先となっているユーザーのメールボックスにメールを格納する。  
 ④受取人側はPOPサーバーやIMAPサーバーを経由して自分のメールボックスからメールを取り出す。  
 
-### Sendmail,Exim,Postfix
-
-Sendmail : 1981  
-Exim : 1995  
-Postfix : 1998  
-
-Sendmailは標準的なMTAとして長く使われてきたが、最近は使われていない。(さすがに古いし、後継もある)  
-主流はEximとPostfix。  
-SMTPサーバーとして使われる。  
-EximとPostfixはSendmailに互換性がある。  
-
-以下のコマンドとファイルでの設定が有効であるため  
-・sendmailコマンド  
-・newaliasesコマンド  
-・mailqコマンド  
-・~/.forwardファイル  
-
-### ローカルユーザー宛のメールが格納されるディレクトリ
-
-Sendmail : /var/spool/mail  
-Exim : /var/mail  
-Postfix : /var/mail  
-
-### 転送することが出来なかったメールを置くデフォルトのキューディレクトリ
-
-Sendmail : /var/spool/mqueue  
-Exim : /var/spool/exim/input  
-Postfix : /car/spool/postfix/deferred  
-
 ### Sendmail
 
+Sendmail : 1981  
 古くから使われるMTAで、様々なメール転送方式に対応している。  
 1つのプログラムで全ての処理を実行できる反面、設定は難解で専用のツールを使う必要がある。  
 また、セキュリティ面での問題がたびたび発生したり、処理速度が遅いなどの問題もある。
 
 ``` txt : sendmailのメールスプールとキュー
-スプール :: /var/spool/mail    :: 受信メール     :: mail
-キュー   :: /var/spool/mqueue/ :: 返信待ちメール :: mailq
+スプール :: /var/spool/mail/   :: mail
+キュー   :: /var/spool/mqueue/ :: mailq
 ```
 
 ### Exim
 
+Exim : 1995  
 Debian系の標準MTA。  
 設定は平易だが、日本語の情報は比較的少ない。  
 設定ファイルの内容はバージョンによって異なる。  
 
 ``` txt : Eximのメールスプールとキュー
-スプール :: /var/mail/   :: 受信メール     :: mail
-キュー   :: /var/spool/mqueue/ :: 返信待ちメール :: mailq
+スプール :: /var/mail/             :: mail
+キュー   :: /var/spool/exim/input/ :: mailq
 ```
 
 ### Postfix
 
+Postfix : 1998  
 sendmailとの高い互換性を保ちながら、処理を高速化している。  
 設定が平易でsendmailよりもセキュリティが向上しているため、最近の一部のLinuxディストリビューションで標準のMTAになっている。  
 
 ``` txt : Postfixのメールスプールとキュー
-スプール :: /var/mail          :: 受信メール     :: mail
-キュー   :: /var/spool/mqueue/ :: 返信待ちメール :: mailq
+スプール :: /var/mail/                   :: mail
+キュー   :: /var/spool/postfix/deferred/ :: mailq
 ```
 
 ### /etc/aliasesファイル
@@ -980,11 +1019,6 @@ root: admin,lpic
 support: root,postmaster, xxxx@yahoo.co.jp
 # newaliases ←設定を反映させるために必要
 ```
-
-### MTAの起動
-
-??
-なんのこうもくだ？
 
 ### mailコマンド
 
@@ -1132,7 +1166,7 @@ lpstat :: プリントキューにある印刷ジョブを表示
   CUPSの設定ファイル  
   印刷要求をネットワーク経由で受け付ける場合のポート番号(631)や、接続するクライアントのアクセス許可の設定等。  
 - `/etc/cups/printers.conf`
- プリンタに関する情報などの設定(プリンタの場所や共有設定など)  
+  プリンタに関する情報などの設定(プリンタの場所や共有設定など)  
 - 設定ポート :: 631  
   localhost:631でアクセス。  
 
