--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -1,27 +1,27 @@
 # 11.ネットワークの基礎
 
-``` txt : ネットワーク関係早見表
-## TCP/IPの基礎
+``` txt : TCP/IPの基礎
 ・IPv4、IPv6
 ・ユニキャスト、エニーキャスト、マルチキャスト、ブロードキャスト
 ・ウェルノウンポート
 ・サブネット、ネットワークアドレス、ブロードキャストアドレス、プライベートアドレス  
-・CIDR(Classless Inter-Domain Rounting)  
+・CIDR(Classless Inter-Domain Rounting) :: IPアドレスのクラスの概念を使わずに、任意の長さのサブネットマスクを利用する事。
 ・TCP(Transmission Control Protocol)  
 ・IP(Internet Protocol)  
-・UDP(User Datagram Protocol)  
+・UDP(User Datagram Protocol) :: OSI参照モデルの第4層に属するコネクションレス型のプロトコル。
+                                 データ転送速度が速いことから、ストリーミング用のアプリケーションに用いられる。
 ・ICMP(Internet Control Message Protocol) :: パケットが到達出来なかった場合のエラーメッセージや制御メッセージを通知するプロトコル。
-・ARP(Address Resolution Protocol)
-・ウェルノウンポートの最小値 : 0
-・Linuxの一般ユーザ権限で使用できるポートの最小値 : 1024
+・ARP(Address Resolution Protocol) :: IPアドレスからMACアドレスを求めるときに使われるプロトコル。
+※ウェルノウンポートの最小値 : 0
+※Linuxの一般ユーザ権限で使用できるポートの最小値 : 1024
 A   ::   0.0.0.0 - 127.255.255.255 :: 255.0.0.0
 B   :: 128.0.0.0 - 191.255.255.255 :: 255.255.0.0
 C   :: 192.0.0.0 - 223.255.255.255 :: 255.255.255.0
 D   :: 224.0.0.0 - 239.255.255.255
 E   :: 240.0.0.0 - 255.255.255.255
+```
 
-
-## ネットワークの設定
+``` txt : ネットワークの設定
 ・/etc/services           :: ポート番号とサービスの対応が記述されたファイル。複数形であることに注意。
 ・/etc/sysconfig/network  :: ホスト名を設定するファイル(Red Hat系)。ネットワーク機能の有効/無効やデフォルトゲートウェイ等も設定可能。  
 ・/etc/hosts              :: IPアドレスとホスト名の対応付けファイル。
@@ -41,8 +41,9 @@ limited :: ネットワークに接続しているが、インターネットに
 none    :: どのネットワークにも接続していない。
 unknown :: 接続状態が見つからない。
 ・hostnamectl    :: systemdが動作するシステムにおける、ホスト名や関連する情報の表示、ホスト名の設定を行うコマンド。  
+```
 
-## ネットワークのトラブルシューティング
+``` txt : ネットワークのトラブルシューティング
 ・ping        :: 宛先アドレスに到達可能か確認するコマンド。
 ・ping6       :: ipv6版。
 ・traceroute  :: 宛先アドレスまでの経路を確認するコマンド。
@@ -67,12 +68,15 @@ unknown :: 接続状態が見つからない。
 ※Linuxのルーティングテーブルでは「default」と表示される  
 デフォルトゲートウェイ
 「ip route show」「netstat -r」「route」
+```
 
-## DNS
-・/etc/resolv.conf  :: 名前解決に利用するDNSサーバの指定や、ドメインの指定をするファイル。
-                       nameserver :: 名前解決に使用するDNSサーバー(1サーバー1行)
-                       domain     :: 自サーバーの所属するドメイン名
-                       search     :: 名前解決の際に省略されうるドメイン名のリスト(スペース区切り)
+``` txt : DNS
+・/etc/resolv.conf
+名前解決に利用するDNSサーバの指定や、ドメインの指定をするファイル。
+nameserver :: 名前解決に使用するDNSサーバー(1サーバー1行)
+domain     :: 自サーバーの所属するドメイン名
+search     :: 名前解決の際に省略されうるドメイン名のリスト(スペース区切り)
+
 ・/etc/nsswitch.conf:: GNU Cライブラリが名前解決やサービス名解決の際の問い合わせ順序を指定するファイル。
 ・systemd-resolved  :: systemdの動作するシステムで名前解決を管理するデーモン。
 ・/etc/systemd/resolved.conf :: systemd-resolvedの設定ファイル。
