--- a/LPIC/102/12.セキュリティ.md
+++ b/LPIC/102/12.セキュリティ.md
@@ -1,7 +1,6 @@
 # 12.セキュリティ
 
-``` txt : セキュリティ関係早見表
-## ホストレベルのセキュリティ
+``` txt : ホストレベルのセキュリティ
 ・スーパーサーバー :: サーバープログラムを管理するプログラム。
 ・xinetd           :: スーパーサーバデーモン。ネットワークからのリクエストを受け付けるデーモン。  
 ・inetd            :: xinetdの前身。TCP Wrapper必須。
@@ -16,8 +15,9 @@
 ・lsof             :: ファイルシステムやポートなど、システムのリソースを使用しているプロセスの情報を表示できるコマンド。
 ・nmap             :: ポートスキャンをするコマンド。
 ・fuser            :: システムの特定のリソースを使用中のプロセスを検索し、強制終了することのできるコマンド。
+```
 
-## ユーザーに対するセキュリティ管理
+``` txt : ユーザーに対するセキュリティ管理
 ・/etc/nologin :: rootユーザ以外のユーザのログインを禁止するファイル。
 ・/etc/sudoers :: sudoコマンドの設定を行うファイル。
 ・/etc/shadow  :: シャドウパスワードやパスワードの有効期限に関する情報が記載されるファイル。
@@ -34,8 +34,9 @@
 ・sudo         :: 別のユーザーの権限でプログラムを実行するためのコマンド。
 ・visudo       :: /etc/sudoersを編集するコマンド。sudoコマンドの利用設定をするコマンド。
 ・ulimit       :: ユーザやシェルが利用できるリソースの制限を設定したり表示できるコマンド。
+```
 
-## OpenSSH
+``` txt : OpenSSH
 ・SSH                      :: 暗号や認証の技術を利用して、安全にリモートコンピュータと通信するためのプロトコル。
 ・sshd                     :: SSHサーバーの機能を提供するデーモン。
 ・/etc/ssh/sshd_config     :: sshdの設定ファイル。SSHサーバーの設定ファイル。
@@ -63,14 +64,16 @@
                               SSHサーバー to SSHクライアント
 ・X11ﾎﾟｰﾄﾌｫﾜｰﾃﾞｨﾝｸﾞ        :: ポートフォワーディングの機能を使って、ネットワークを介したXサーバ・クライアントの通信を暗号化し、接続を簡略化すること。
                               SSHサーバー to SSHクライアント with X11  
+```
 
-## GnuPGによる暗号化
+``` txt : GnuPGによる暗号化
 ・GnuPG     :: 公開鍵暗号方式を使って、ファイルの暗号化や復号をしたり、電子署名をしたりすることができるオープンソースソフトウェア。
 ・gpg-agent :: GnuPGにおいて秘密鍵を管理し、パスフレーズによる認証状態を一定期間キャッシュするデーモンプログラム。
 ・gpg       :: GnuPGを使ってファイルの暗号化や復号を行うコマンド。
 ・~/.gnupg/ :: GnuPGに関連するファイルの置かれるディレクトリ。
+```
 
-## その必要なコマンド
+``` txt :その必要なコマンド
 ・/var/log/wtmp :: ユーザのログイン/ログアウト情報が記録されているバイナリファイル。
 ・/var/run/utmp :: ログイン中のユーザの情報が格納されているバイナリファイル。  
 ・last          :: 「/var/log/wtmp」ファイルを参照し、最近ログインしたユーザの一覧を表示するコマンド。
