--- a/LPIC/102/7.シェルとシェルスクリプト.md
+++ b/LPIC/102/7.シェルとシェルスクリプト.md
@@ -1,13 +1,12 @@
 # 7.シェルとシェルスクリプト
 
-``` txt
-## シェル環境のカスタマイズ
+``` txt : シェル環境のカスタマイズ
 ・alias    :: エイリアスを設定するコマンド。
               本来のコマンドを実行したい場合は頭に「\(バックスラッシュ)」を付けて実行するか、パス付きで実行する。
               既に登録されている別名と同じ別名で再定義した場合、上書きされる。
 ・unalias  :: 設定したエイリアスを削除するコマンド。
 ・function :: bashシェル上で利用できる独自の関数を定義するためのコマンド。
-・unset    :: 定義したシェル関数を削除するコマンド。
+・unset    :: 設定済みの環境変数やシェル変数を削除するコマンド。
 ・declare  :: 変数を宣言するコマンド。シェル関数の確認は「-f」。
 ・set      :: シェルの設定を確認、変更するコマンド。全てのシェル変数、シェル関数、環境変数を表示できる。
               パス名のワイルドカードによる展開（*や?）を無効に設定したい。[set -o noglob]
@@ -24,12 +23,14 @@
 ・~/.profile       :: ~/.bash_profileも~/.bash_loginもない場合、ログイン時に実行される。内容は~/.bash_profileと同じ。  
 ・~/.bashrc        :: 各ユーザー個別のbash起動時に実行させたい処理(エイリアス)等を記述するファイル。読み込む設定がない場合は読み込まれない。
 ・~/.bash_logout   :: bashログアウト時に実行させたい処理を記述するファイル。
-※bashにおける環境設定ファイル
- ・bashで実行できるシェルスクリプトである
- ・ログインシェル起動時に「/etc/profile」を最初に読み込む
- ・実行権は必要ない。(soueceコマンド、ファイルの読み取り権、ディレクトリの検索権[-x]があればよい。)
 ・ログインシェル   :: /etc/passwdに設定され、ユーザーのログイン時に最初に起動されるシェル。このシェルが終了するとログアウトされる。  
-・非ログインシェル :: ログインシェルから別のプロセスとして起動するシェル。コマンドラインから直接起動したシェル。 
+・非ログインシェル :: ログインシェルから別のプロセスとして起動するシェル。コマンドラインから直接起動したシェル。  
+・export           :: シェル変数を環境変数に変更するコマンド。
+・bash :: Linuxの標準シェル
+・sh :: 1977年にAT&Tベル研究所のスティーブン・ボーンにより開発された（Bourne Shell）
+・ksh :: 1980年代初期にベル研究所のデビッド・コーンにより開発された（KornShell）
+・csh :: BSD UNIXシステム上でビル・ジョイによってC言語をモデルとして開発された
+・tcsh :: cshのバグを修正し、機能を拡張したもの
 
 ■ bashをログインシェルとして起動した場合の読み込み順  
 1. /etc/profile     ← 絶対
@@ -45,12 +46,19 @@
 2. ~/.bashrc        ← 絶対
 3. /etc/bashrc      ← 読み込む設定があれば読み込む 
 
-## シェルスクリプト
+■bashにおける環境設定ファイル
+・bashで実行できるシェルスクリプトである
+・ログインシェル起動時に「/etc/profile」を最初に読み込む
+・実行権は必要ない。(soueceコマンド、ファイルの読み取り権、ディレクトリの検索権[-x]があればよい。)
+```
+
+``` txt : シェルスクリプト
 ・コマンド置換 :: コマンドの実行結果をシェル変数に代入する機能。  
                   ・コマンドを「$()」で囲んで、その結果をシェル変数に代入する。  
                   ・コマンドをバッククオート「`」で囲んでその結果をシェル変数に代入する。  
 ・source  :: ファイルに書かれたコマンドを現在のシェルで実行する事を指示するコマンド。「.（ドット）」でも代用されます。
-・exec    :: 子プロセスを生成するのではなく、現行プロセスを引数で指定したコマンドに入れ替えて実行するコマンド。
+・exec    :: 指定したコマンドを既存のジョブ(シェルのプロセス)に置き換えて実行するコマンド。
+             子プロセスを生成するのではなく、現行プロセスを引数で指定したコマンドに入れ替えて実行するコマンド。
 ・シバン(シェバング) :: スクリプトファイルの1行目「#!」の事。そのシェルスクリプトがどのインタープリタ（シェル）で実行されるかを記述します。
 ・$0      :: シェルスクリプトファイル名。  
 ・$1      :: 1番目の引数。※ 2番目の引数の場合は $2 と指定する。10番目以降は${10}のように「{}」で囲う。  
