火をまたぐ前に草はやす

--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -387,3 +387,9 @@ SUIDのグループバージョン。
 スティッキービット（Sticky Bit）とは、ディレクトリに設定される特殊なアクセス権の事です。  
 スティッキービットが設定されたディレクトリは、すべてのユーザがファイルおよびディレクトリを作成書き込みを行えるようになる。  
 しかし、作成したファイルやディレクトリを削除出来るのは所有者だけとなるというパーミッション。  
+
+---
+
+## lsコマンド
+
+list segments
