--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -71,17 +71,54 @@ E   :: 240.0.0.0 - 255.255.255.255
 ・systemd-resolved  :: systemdの動作するシステムで名前解決を管理するデーモン。
 ・/etc/systemd/resolved.conf :: systemd-resolvedの設定ファイル。
 ・host     :: DNSサーバーを使ってホストやドメインに関する情報を表示する。最も基本となるコマンド。最小出力。
-・dig      :: DNSサーバへ直接問い合わせて、指定した名前に関するDNSサーバからの応答を表示します。
+・dig      :: DNSサーバへ直接問い合わせて、指定した名前に関するDNSサーバからの応答を表示します。ドメイン情報も表示される。
 ・getent   :: 名前解決の順序を設定する「/etc/nsswitch.conf」に従って検索を行うコマンド。
 ・whois    :: 調べたいドメイン名を指定して、whoisデータベースに問い合わせるコマンド。
 ・nslookup :: WindowsにおいてDNSサーバに名前解決を問い合わせるWindowsのコマンド。
+```
 
-※DNSを利用し、ホスト名をIPアドレスに変換することができるコマンド  
-host、nslookup、getent、dig  
-出力する情報が最も少ないのはhostコマンド
+``` txt : よく間違える問題・気を付ける事
+■ipコマンド
+・ルートを表示した場合「via」の表示がある。
+・詳細表示オプションは「-s」
+●ARPキャッシュの内容を確認
+[ip neighbor sh] or [ip neighbor show]
+neighborはIPv4のARPキャッシュを表示するコマンド。
+コマンドadd,del,show。省略形はa,d,sh
+●インタフェースを有効化・無効化するには、linkオブジェクトにsetコマンドを発行します。
+ip link set { up | down } dev インタフェース
+ip link set インタフェース up|down
 
-ドメイン情報の表示  
-dig  
+■netstatコマンド
+●出来ない事
+・ブロードキャストを利用するサービスについて表示する
+・ネットワークインターフェースにIPアドレスを設定する
+表示はできるが、設定は一切出来ない。
+インターフェースの情報やソケットの情報はわかるが、ブロードキャストサービスを表示するオプションはない。
+
+●表示される項目
+Active Internet connections
+Proto , Recv-Q , Send-Q , LocalAddress , ForeignAddress , State , 
+Active UNIX domain sockets
+Proto , RefCnt , Flags , Type , State , I-Node , Path
+
+■ifconfigコマンド
+●使用時の影響範囲
+・ifconfigコマンドを実行しても何も影響がない場合もある。
+・インターフェースのアップ・ダウン状態が変更される。
+●表示される情報
+・送受信バイト数
+・ブロードキャストアドレス
+・IPアドレス
+・サブネットマスク
+・MTU
+
+■ルーティングテーブルを表示できるコマンド
+[route] [netstat -r] [ip route show]
+
+■DNSを利用し、ホスト名をIPアドレスに変換することができるコマンド  
+[host] [nslookup] [getent] [dig]
+この中で出力する情報が最も少ないのはhostコマンド
 ```
 
 ## TCP/IPの基礎
@@ -779,7 +816,7 @@ serverの8000/tcpで待ち受けし、clientから接続されるとresponse.txt
 
 ルーティングテーブルの表示や操作を行うコマンド  
 routeコマンドを引数なしで実行すると、ルーティングテーブルが表示される。  
-`route` = `netstat -r`  
+`route` = `netstat -r` = `ip route show`
 
 ``` txt
 ■ルーティングテーブルの表示を行う書式
@@ -831,7 +868,7 @@ default gw :: デフォルトゲートウェイを指定
 デフォルトゲートウェイ172.17.255.254を削除する。
 `route del default gw 172.17.255.254`  
 `route del default`  
-
+→  
 デフォルトゲートウェイを削除するには、デフォルトゲートウェイのIPアドレスを指定して削除する方法としないで削除する方法があります。  
 IPアドレスを指定する場合は、「route del」の後に「default gw」というオプションの後でIPアドレスを指定します。  
 例えば「route del default gw 192.168.1.254」のようになります。  
@@ -943,7 +980,7 @@ eth0のipアドレスを192.168.11.12/24に設定する
 `ip addr add 192.168.11.12/23 dev eth0`  
 
 デフォルトゲートウェイを192.168.11.1に設定
-`id addp add default via 192.168.11.1`  
+`ip addr add default via 192.168.11.1`  
 
 ### 経路表示コマンド早見表
 
