--- a/LPIC/102/7.シェルとシェルスクリプト.md
+++ b/LPIC/102/7.シェルとシェルスクリプト.md
@@ -54,8 +54,6 @@
 
 ``` txt : シェルスクリプト
 ・コマンド置換 :: コマンドの実行結果をシェル変数に代入する機能。  
-                  ・コマンドを「$()」で囲んで、その結果をシェル変数に代入する。  
-                  ・コマンドをバッククオート「`」で囲んでその結果をシェル変数に代入する。  
 ・source  :: ファイルに書かれたコマンドを現在のシェルで実行する事を指示するコマンド。「.（ドット）」でも代用されます。
 ・exec    :: 指定したコマンドを既存のジョブ(シェルのプロセス)に置き換えて実行するコマンド。
              子プロセスを生成するのではなく、現行プロセスを引数で指定したコマンドに入れ替えて実行するコマンド。
@@ -78,6 +76,11 @@
 ・&&      :: command1が成功した場合のみcommand2を実行する。  
 ・||      :: command1が失敗した場合のみcommand2を実行する。  
 ・;       :: コマンドを続けて実行する。  
+```
+
+``` txt : きをつけ
+・コマンドを「$()」で囲んで、その結果をシェル変数に代入する。  
+・コマンドをバッククオート「`」で囲んでその結果をシェル変数に代入する。  
 ```
 
 ## シェル環境のカスタマイズ
