--- a/LPIC/102/99_スピードマスター模試.md
+++ b/LPIC/102/99_スピードマスター模試.md
@@ -264,3 +264,79 @@ ulimitコマンド
 セキュリティでやったっぽいが全然出てこなかった。  
 
 ---
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+``` txt
+##01 D 
+##02 A 
+##03 A 
+##04 A
+##05 E
+##06 C,D
+##07 B
+##08 A
+##09 B,D
+##10 B
+##11 C
+##12 A
+##13 -m
+##14 B
+##15 B,D
+##16 A
+##17 D
+##18 B
+##19 A
+##20 C
+##21 C
+##22 B
+##23 B
+##24 hwclock
+##25 D
+##26 B,D
+##27 C
+##28 A,C
+##29 A,B
+##30 A,B
+##31 
+##32
+##33
+##34
+##35
+##36
+##37
+##38
+##39
+##40
+##41
+##42
+##43
+##44
+##45
+##46
+##47
+##48
+##49
+##50
+##51
+##52
+##53
+##54
+##55
+##56
+##57
+##58
+##59
+##60
+```
