白本の間違った問題の復習

--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -2,15 +2,12 @@
 
 ``` txt : システムクロックの設定
 ・date :: システムクロックの参照や設定を行うコマンド。
-           date [MMDDhhmm[CC[YY]][.ss]](MMは月、DDは日、hhは時、mmは分、CCは西暦の上2桁、YYは西暦の下2桁、ssは秒)
+※date [MMDDhhmm[CC[YY]][.ss]](MMは月、DDは日、hhは時、mmは分、CCは西暦の上2桁、YYは西暦の下2桁、ssは秒)
 ・hwclock :: ハードウェアクロックの参照や設定を行うコマンド。
 ・timedatectl :: systemdの動作するシステムにおいてシステム時刻の表示や設定を行うコマンド。
 ・ntpd :: NTPデーモン。NTPサーバー機能を提供する。
-          自身をNTPサーバとすることで、指定したNTPサーバに定期的に時刻情報を問い合わせて自身の時刻を修正し、正確なシステムクロックを維持できます。
+※自身をNTPサーバとすることで、指定したNTPサーバに定期的に時刻情報を問い合わせて自身の時刻を修正し、正確なシステムクロックを維持できます。
 ・/etc/ntp.conf :: ntpd（NTPサーバのデーモン）の設定ファイル。
-                   restrict  :: ntpdへのアクセス制限を行う。
-                   server    :: 時刻を取得するサーバを指定。
-                   driftfile :: 自身の時刻のズレ具合を記録するファイルを指定。
 ・ntpdate          :: 手動でNTPサーバから正確な時刻を取得し、システムクロックに反映させるコマンド。NTPクライアントとしてのツール。
 ・ntpq             :: ntpdの時刻同期状況を確認するコマンド。[*]時刻同期先、[+]同期可能、[-]参照しない事が決定。[-p :: 時刻同期状況]
 ・Chrony(ｸﾛｰﾆｰ)    :: ntpdに代わるNTPサーバ/クライアント。
@@ -61,7 +58,7 @@ journalctl -o json
 journalctl -u sshd.service
 journalctl _SYSTEMD_UNIT=sshd.service
 
-・systemd-cat :: 指定したコマンドの実行結果をジャーナルファイルに書き込むコマンド。ログメッセージを生成できるloggerコマンドと同様です。
+・systemd-cat :: 指定したコマンドの実行結果をジャーナルファイルに書き込むコマンド。ログメッセージを生成できるloggerコマンドと同様。
 ・logger      :: システムログに記録を追加するコマンド。
 ・logrotate   :: ログのローテーションを実行するコマンド。通常はcronによって定期的に実行される。
 ・/etc/logrotate.conf :: ログローテーションの設定ファイル。
@@ -129,7 +126,7 @@ MUAの例としては、LinuxのmailコマンドやThunderbird、WindowsやMac O
 ・newaliases   ::「/etc/aliases」を編集後、設定を反映させるためのコマンド。
 ・~/.forward   :: ユーザー個別でメールの転送先を記載するファイル。即時反映。
 ・sendmail :: 古くからあるMTAのsendmailでは、メール送信やMTAの制御のためにsendmailコマンドが用意されていました。
-              引数無しで単独で実行すると、標準入力からメールのデータを受け取り、.(ピリオド)のみの行を受け取った時点でメールの送信を行います。
+※引数無しで単独で実行すると、標準入力からメールのデータを受け取り、.(ピリオド)のみの行を受け取った時点でメールの送信を行います。
 ・mail  :: メールの送信や受信メールの確認を行うコマンド。オプションを付けずにコマンドを実行すると、[/var/spool/mail/]に格納されている受信メールを表示する。
 ・mailq :: 一般的なMTAにおいて、送信待ちのメールキューを一覧表示できるコマンド。
 ・オープンリレー :: 
@@ -415,8 +412,11 @@ server    :: 時刻を取得するNTPサーバーを指定。サーバー/クラ
 peer      :: 時刻を取得するNTPサーバーを指定。同じstratum(階層)同士。
 pool      :: 時刻を取得するNTPサーバーのプール(複数アドレスを集約した名前)を指定。
 driftfile :: 自身の時刻のズレ具合を記録するファイルを指定。
-rtcsync   :: システムクロックをハードウェアクロック(RTC)にコピーする。
-             デフォルトで11分おきに反映される。
+rtcsync   :: システムクロックをハードウェアクロック(RTC)にコピーする。デフォルトで11分おきに反映される。
+makestep  :: 参照クロックとの時間差の閾値と、ステップ方式による時刻補正の回数を指定するパラメータ。
+
+※makestepは白本の模試に出てきたパラメーター。
+※serverはあるが、clientはないので注意。
 ```
 
 ``` conf : /etc/chrony.confの設定例
@@ -1199,6 +1199,7 @@ lpstat :: プリントキューにある印刷ジョブを表示
   印刷要求をネットワーク経由で受け付ける場合のポート番号(631)や、接続するクライアントのアクセス許可の設定等。  
 - `/etc/cups/printers.conf`
   プリンタに関する情報などの設定(プリンタの場所や共有設定など)  
+  プリンタのDeviceURIを指定する。
 - 設定ポート :: 631  
   localhost:631でアクセス。  
 
