--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -72,6 +72,7 @@ E   :: 240.0.0.0 - 255.255.255.255
 ・/etc/systemd/resolved.conf :: systemd-resolvedの設定ファイル。
 ・host     :: DNSサーバーを使ってホストやドメインに関する情報を表示する。最も基本となるコマンド。最小出力。
 ・dig      :: DNSサーバへ直接問い合わせて、指定した名前に関するDNSサーバからの応答を表示します。ドメイン情報も表示される。
+※ホスト名の指定はwwwを含んでも含まなくても良い。  
 ・getent   :: 名前解決の順序を設定する「/etc/nsswitch.conf」に従って検索を行うコマンド。
 ・whois    :: 調べたいドメイン名を指定して、whoisデータベースに問い合わせるコマンド。
 ・nslookup :: WindowsにおいてDNSサーバに名前解決を問い合わせるWindowsのコマンド。
@@ -1353,6 +1354,11 @@ digコマンドで外部のDNSサーバ8.8.8.8に「yahoo.co.jp」のIPアドレ
 
 DNSサーバに登録されている、「yahoo.co.jp」ドメインのゾーンに関する情報を確認したい。  
 `dig -t soa yahoo.co.jp` or `dig yahoo.co.jp soa`  
+
+白本模試より、検索結果のQUESTION SECTIONなるセクションに例えば[IN NS]と表示されていた場合、  
+`dig -t ns ホスト名`のコマンドを実行したと逆算できるらしい。  
+
+※ホスト名の指定はwwwを含んでも含まなくても良い。  
 
 ### whoisコマンド  
 
