--- a/LPIC/102/9.管理タスク.md
+++ b/LPIC/102/9.管理タスク.md
@@ -101,12 +101,10 @@ usermod -Gを使う
 ・LC_ALL       :: ロケールの環境変数すべて  
                   指定した値が全てのカテゴリを上書きし、カテゴリごとの設定が出来ない。
 ・LANG         :: 全てのカテゴリで必ずその値が使われるが、個々のカテゴリ毎に個別の設定が可能。
-                  (LC_ALL)が設定されていない場合、指定した値がデフォルトとして使用される。
+※LC_ALLが設定されていない場合、指定した値がデフォルトとして使用される。
 ※LC_ALLは全てのカテゴリを上書きするので「/etc/locale.conf」に設定することは推奨されません。
-※systemdが動作するシステムでのロケール設定ファイルの説明
-システム全体のロケール設定ファイルは「/etc/locale.conf」である
-システム全体のロケール設定ファイルにLC_ALLを設定できるが、設定することは推奨されない
-「LANG=C」を設定すると、ロケールが異なる環境でも英語で共通の出力が得られる
+※「LANG=C」を設定すると、ロケールが異なる環境でも英語で共通の出力が得られる
+※LC_ALLはlocale.confに記述しない
 
 
 ・iconv :: 文字コードを変換するコマンド  
@@ -650,6 +648,7 @@ at -lと同じ動作をする。
 ② /etc/cron.allowファイルが無ければ、/etc/cron.denyを参照し、/etc/cron.denyに記述されていないすべてのユーザーがcronを利用できる。  
 ③ /etc/cron.allowファイル、/etc/cron.denyファイルのどちらもない場合、すべてのユーザーがcronを利用可能。  
 ※最新バージョンでは、rootユーザーのみが利用可能。  
+ping-tではrootユーザーのみ。白本では全てのユーザーがOKとのこと。  
 
 初期状態では利用制限が行われていないため、すべてのユーザーが実行することができる。  
 
